add model selection

--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,15 @@
     <div id="promptsContainer" style="display: none;"></div>
   </div>
 
+  <div id="modelContainer">
+    <p>Select Model:</p>
+    <select id="modelSelect">
+      <option value="gpt-4">GPT-4</option>
+      <option value="gpt-4-turbo-preview">GPT-4 Turbo Preview</option>
+      <option value="gpt-3.5-turbo">GPT-3.5 Turbo</option>
+    </select>
+  </div>
+
   <button id="generateCoverLetter">Generate Cover Letter</button>
   <div id="feedback"></div>
   <div id="jobDescAlert" style="color: red;"></div>
